@@ -45,7 +45,8 @@ parse_prime(int linenum, char *line, struct dhgroup *dhg)
 	char *strsize, *gen, *prime;
 
 	cp = line;
-	arg = strdelim(&cp);
+	if ((arg = strdelim(&cp)) == NULL)
+		return 0;
 	/* Ignore leading whitespace */
 	if (*arg == '\0')
 		arg = strdelim(&cp);
