@@ -26,6 +26,10 @@
      [hostfile.c]
      FILE* leak detected by Coverity via elad AT netbsd.org;
      ok deraadt@
+   - djm@cvs.openbsd.org 2006/03/19 02:24:05
+     [dh.c readconf.c servconf.c]
+     potential NULL pointer dereferences detected by Coverity
+     via elad AT netbsd.org; ok deraadt@
 
 20060325
  - OpenBSD CVS Sync
@@ -4283,4 +4287,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4248 2006/03/26 02:52:20 djm Exp $
+$Id: ChangeLog,v 1.4249 2006/03/26 02:53:32 djm Exp $
